--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -2,21 +2,20 @@ version: 2
 
 multi-ecosystem-groups:
   build-infrastructure:
+    target-branch: "main"
     schedule:
       interval: "weekly"
 
 updates:
   - package-ecosystem: "github-actions"
     directory: "/"
-    target-branch: "main"
     schedule:
       interval: "weekly"
-    patterns: ["actions/*"]
+    patterns: ["actions/*", "antoniovazquezblanco/*"]
     multi-ecosystem-group: "build-infrastructure"
 
   - package-ecosystem: "gradle"
     directory: "/"
-    target-branch: "main"
     schedule:
       interval: "weekly"
     patterns: ["gradle/*"]
